--- a/server/package.json
+++ b/server/package.json
@@ -10,23 +10,29 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.5.5",
 		"@types/morgan": "^1.9.3",
-		"@types/node": "^8.0.29",
+		"@types/node": "^16.7.10",
 		"@types/socket.io": "^2.1.13",
+		"@types/uuid": "^8.3.1",
 		"nodemon": "^2.0.12",
 		"ts-node": "3.3.0",
-		"typescript": "3.3.3333"
+		"typescript": "4.3.5"
 	},
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"dotenv": "^8.6.0",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
 		"mysql2": "^2.3.0",
 		"reflect-metadata": "^0.1.10",
 		"socket.io": "^2.4.1",
-		"typeorm": "0.2.37"
+		"typeorm": "0.2.37",
+		"uuid": "^8.3.2"
 	}
 }
