--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
 		"date-fns": "^2.23.0",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
+		"lodash.throttle": "^4.1.1",
 		"next": "11.1.0",
 		"next-redux-wrapper": "^7.0.2",
 		"react": "17.0.2",
@@ -27,6 +28,7 @@
 		"yup": "^0.32.9"
 	},
 	"devDependencies": {
+		"@types/lodash.throttle": "^4.1.6",
 		"@types/react": "^17.0.19",
 		"@types/socket.io-client": "^1.4.36",
 		"eslint": "7.32.0",
