--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "nodemon src/server.ts"
+		"build": "rm -rf build && tsc --build",
+		"dev": "nodemon src/server.ts",
+		"start": "NODE_ENV=production node build/server.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -14,9 +16,11 @@
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.5",
+		"@types/lodash": "^4.14.173",
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^16.7.10",
 		"@types/socket.io": "^2.1.13",
+		"@types/socket.io-parser": "^2.2.1",
 		"@types/uuid": "^8.3.1",
 		"nodemon": "^2.0.12",
 		"ts-node": "3.3.0",
@@ -28,6 +32,7 @@
 		"dotenv": "^8.6.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.21",
 		"morgan": "^1.10.0",
 		"mysql2": "^2.3.0",
 		"reflect-metadata": "^0.1.10",
